@@ -2,19 +2,19 @@
 
 .news-item-wrapper{
     /* border: 1px solid black; */
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     height: 200px;
-    width: 100%;
+    width: 100%; */
 }
 
 .news-item{
-    background-color: white;
+    /* background-color: white;
     border: 5px solid #0000001c;
     display: flex;
     flex: 1;
     height: 100%;
-    min-width: 200px;
+    min-width: 200px; */
     /* padding: 1rem; */
 
 }
@@ -22,20 +22,20 @@
 .news-item-link{
     /* border: 1px solid; */
     /* background-color: red; */
-    display: block;
+    /* display: block;
     height: 100%;
-    position: relative;
+    position: relative; */
 }
 
 .news-item-link div{
-    background-color: rgba(0, 0, 0, 0.74);
+    /* background-color: rgba(0, 0, 0, 0.74);
     bottom: 0;
-    color: white;
+    color: white; */
     /* padding: 2rem; */
-    position: absolute;
-    width: 100%;
+    /* position: absolute; */
+    /* width: 100%;
     text-align: center;
-    height: 3rem;
+    height: 3rem; */
 }
 
 @media (min-width: 768px) {
